<resources>
    <string name="app_name">News on the Throne</string>
    <string name="asunto">Asunto</string>
    <string name="asunto1">Asunto</string>
    <string name="cuerpo_noticia">Cuerpo Noticia</string>
    <string name="cuerpo_noticia1">Cuerpo Noticia</string>
    <string name="fecha">Fecha</string>
    <string name="fecha1">Fecha</string>
    <string name="tiempo">1:00</string>


</resources>