<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pantalla2">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagen"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/deportes1"
        android:layout_width="200dp"
        android:layout_height="200dp">

    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/asunto"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/encabezado"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="@string/asunto1"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/cuerpo_noticia"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/descripcion"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:text="@string/cuerpo_noticia1"
            android:textStyle="italic"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/fecha"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/fecha"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textStyle="italic"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:text="@string/fecha1"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


</LinearLayout>