<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenDePerfil"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/tecno1">

        </de.hdodenhof.circleimageview.CircleImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="5dp"
                android:text="@string/asunto"
                android:textColor="@color/black"
                android:textSize="21dp">

            </TextView>

            <TextView
                android:id="@+id/ultimoMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="5dp"
                android:text="@string/cuerpo_noticia"
                android:textColor="#979494"
                android:textSize="15dp">

            </TextView>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="5dp"
                android:text="Nueva Noticia"
                android:textColor="@color/black"
                android:textSize="18dp">

            </TextView>

            <TextView
                android:id="@+id/tv_ultimaHora"
                android:layout_width="68dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:text="@string/tiempo"
                android:textColor="#444B4C"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                >

            </TextView>

        </RelativeLayout>



    </LinearLayout>

</LinearLayout>